--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,25 @@
 .main-field{
     background-color: lightblue;
-    width: 50%;
 }
 .cloth {
     width: 60%;
 }
 label{
     font-weight: 700;
+}
+.banner img{
+    max-width: 100%;
+    height: 100%;
+}
+
+
+@media only screen and (max-width: 700px) {
+  .d-flex {
+    display: flex!important;
+    align-items: center;
+    flex-direction: column;
+}
+.main-field{
+    margin-top: 20px;
+}
 }
